# preggo

./: .gitignore  CIRCLE_SYSTEM_DESIGN.md  Dockerfile  ENHANCED_REACTIONS_THREADING_IMPLEMENTATION.md  FEED_OVERHAUL_SUMMARY.md  FEED_SYSTEM_API_SPECIFICATION.md  FEED_SYSTEM_OVERHAUL_DESIGN.md  FRONTEND_COMPONENT_SPECIFICATIONS.md  Makefile  PERFORMANCE_SCALABILITY_GUIDE.md  PREGGO_FEED_IMPLEMENTATION_ROADMAP.md  README.md  SIMPLIFIED_CIRCLES_DESIGN.md  lighthouserc.js  lowhangingfruits.md  railway.json  render.yaml  vercel.json
backend/: .env.example  Dockerfile  README.md  alembic.ini  check_columns.py  check_migration.py  debug_posts.py  debug_query.py  debug_users.py  pyproject.toml  railway.json  test_personal_timeline.py
backend/alembic/: env.py
backend/alembic/versions/: 112d2cb152ac_initial_migration.py  13c8ccd7022d_initial_migration.py  20250807_create_baby_development_table.py  2c7dd7bb6e65_initial_migration.py  3eb2123d61bf_initial_migration.py  44fe28c51a8d_add_comment_user_relationship.py  54584cc27ecc_create_complete_pregnancy_tracking_.py  59093a8fde73_merge_migration_branches.py  735c56d21da1_initial_migration.py  ab5c2f883c47_add_remaining_missing_columns.py  ab9bb2613281_.py  add_instagram_feed_columns.py  add_missing_instagram_columns.py  add_token_to_family_invitations.py  de0acaec553d_initial_migration.py  de59728f572f_.py  edca5632613b_add_enhanced_post_columns_for_content_.py  enhance_reactions_and_threading_system.py  (+4 more)
backend/app/: __init__.py  main.py
backend/scripts/: generate_openapi.py  seed_baby_development.py  show_logs.py
(+261 files in other folders)
