[tool.poetry]
name = "backend"
version = "0.1.0"
description = "FastAPI backend boilerplate"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.116.1"
uvicorn = "^0.35.0"
sqlmodel = "^0.0.24"
alembic = "^1.16.4"
pydantic = "^2.11.7"
pydantic-settings = "^2.2.1"
python-dotenv = "^1.1.1"
httpx = "^0.28.1"
supabase = "^2.17.0"
email-validator = "^2.2.0"
psycopg2-binary = "^2.9.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"